--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -4,8 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>stream-me-board</title>
+    <style>
+      @font-face {
+        font-family: 'Zpix';
+        src: url('static/zpix.ttf') format('truetype');
+        text-rendering: optimizeSpeed;
+      }
+      * {
+        font-family: 'Zpix';
+      }
+    </style>
   </head>
-  <body>
+  <body style="background-color: #927964;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
