--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -15,7 +15,7 @@
       }
     </style>
   </head>
-  <body style="background-color: #927964;">
+  <body style="background-color: #45283C;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
