--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -12,9 +12,13 @@
       * {
         font-family: 'Zpix';
       }
+      body {
+        margin: 0px;
+        background: linear-gradient(to bottom, #45283C 0%, #201b46 100%);
+      }
     </style>
   </head>
-  <body style="background-color: #45283C;">
+  <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
