--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -15,7 +15,7 @@
       }
       body {
         margin: 0px;
-        background: linear-gradient(to bottom, #45283C 0%, #201b46 100%);
+        background: linear-gradient(to bottom, #45283C 0%, #3f339e 100%);
         overflow: hidden;
       }
     </style>
