--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/solid.css" integrity="sha384-HTDlLIcgXajNzMJv5hiW5s2fwegQng6Hi+fN6t5VAcwO/9qbg2YEANIyKBlqLsiT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/fontawesome.css" integrity="sha384-8WwquHbb2jqa7gKWSoAwbJBV2Q+/rQRss9UXL5wlvXOZfSodONmVnifo/+5xJIWX" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="static/notyf.min.css">
     <style>
       @font-face {
         font-family: 'Zpix';
@@ -18,13 +22,25 @@
         background: linear-gradient(to bottom, #45283C 0%, #3f339e 100%);
         overflow: hidden;
       }
+      [v-cloak] {
+        display: none;
+      }
+      .notyf__icon--alert:after, .notyf__icon--alert:before,
+      .notyf__toast.notyf--alert {
+        background-color: #AC3232;
+      }
+      .notyf__icon--confirm:after, .notyf__icon--confirm:before,
+      .notyf__toast.notyf--confirm {
+        background-color: #3F3F74;
+      }
     </style>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/solid.css" integrity="sha384-HTDlLIcgXajNzMJv5hiW5s2fwegQng6Hi+fN6t5VAcwO/9qbg2YEANIyKBlqLsiT" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/fontawesome.css" integrity="sha384-8WwquHbb2jqa7gKWSoAwbJBV2Q+/rQRss9UXL5wlvXOZfSodONmVnifo/+5xJIWX" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
+    <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+    <script src="static/firebase-conf.js"></script>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="static/notyf.min.js"></script>
   </body>
 </html>
