--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -36,6 +36,7 @@
     </style>
 
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+    <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
     <script src="static/firebase-conf.js"></script>
   </head>
   <body>
