--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/solid.css" integrity="sha384-HTDlLIcgXajNzMJv5hiW5s2fwegQng6Hi+fN6t5VAcwO/9qbg2YEANIyKBlqLsiT" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/fontawesome.css" integrity="sha384-8WwquHbb2jqa7gKWSoAwbJBV2Q+/rQRss9UXL5wlvXOZfSodONmVnifo/+5xJIWX" crossorigin="anonymous">
+    <link href="/static/fontawesome/css/fontawesome-all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" type="text/css" href="static/notyf.min.css">
     <style>
@@ -31,7 +30,11 @@
       }
       .notyf__icon--confirm:after, .notyf__icon--confirm:before,
       .notyf__toast.notyf--confirm {
-        background-color: #3F3F74;
+        background-color: #639BFF;
+      }
+      .notyf__icon--warn:after, .notyf__icon--warn:before,
+      .notyf__toast.notyf--warn {
+        background-color: #68BD35;
       }
     </style>
 
