--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -17,6 +17,7 @@
         font-size: 14px;
       }
       body {
+        cursor: default;
         margin: 0px;
         background: linear-gradient(to bottom, #45283C 0%, #3f339e 100%);
         overflow: hidden;
