--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -25,6 +25,14 @@
       [v-cloak] {
         display: none;
       }
+      .notyf {
+        right: auto;
+        left: 30px;
+      }
+      .notyf .notyf__message {
+        font-size: 16px;
+        line-height: 18px;
+      }
       .notyf__icon--alert:after, .notyf__icon--alert:before,
       .notyf__toast.notyf--alert {
         background-color: #AC3232;
