--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="/static/fontawesome/css/fontawesome-all.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="static/notyf.min.css">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="static/gamepad-32x32.png" />
+    <link rel="Bookmark" type="image/png" sizes="32x32" href="static/gamepad-32x32.png" />
+    <title>祥平與ice和你一起邊聊邊玩!</title>
     <style>
       @font-face {
         font-family: 'Zpix';
