--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="/static/fontawesome/css/fontawesome-all.css" rel="stylesheet">
     <title>管理頁面</title>
+    <script src="static/fp.min.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
     <script src="static/firebase-conf.js"></script>
