--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/png" sizes="32x32" href="static/gamepad-32x32.png" />
     <link rel="Bookmark" type="image/png" sizes="32x32" href="static/gamepad-32x32.png" />
     <title>祥平與ice和你一起邊聊邊玩!</title>
+    <script src="static/fp.min.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
     <script src="static/firebase-conf.js"></script>
