--- a/pcVisitor.html
+++ b/pcVisitor.html
@@ -23,6 +23,9 @@
         font-family: 'Zpix';
         font-size: 14px;
       }
+      .fas {
+        vertical-align: middle;
+      }
       body {
         cursor: default;
         margin: 0px;
