--- a/mobileVisitor.html
+++ b/mobileVisitor.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>stream-me-board</title>
+    <link href="/static/fontawesome/css/fontawesome-all.css" rel="stylesheet">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="static/gamepad-32x32.png" />
+    <link rel="Bookmark" type="image/png" sizes="32x32" href="static/gamepad-32x32.png" />
+    <title>祥平與ice和你一起邊聊邊玩!</title>
+    <script src="static/fp.min.js"></script>
+    <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+    <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
+    <script src="static/firebase-conf.js"></script>
+    <script src="//www.youtube.com/iframe_api"></script>
   </head>
   <body>
     <div id="app"></div>
