--- a/streamOverlay.html
+++ b/streamOverlay.html
@@ -9,6 +9,17 @@
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
     <script src="static/firebase-conf.js"></script>
+    <style>
+      @font-face {
+        font-family: 'Zpix';
+        src: url('static/zpix.ttf') format('truetype');
+        text-rendering: optimizeSpeed;
+      }
+      * {
+        font-family: 'Zpix';
+        font-size: 18px;
+      }</style>
+    </head>
   </head>
   <body>
     <div id="app"></div>
