--- a/streamOverlay.html
+++ b/streamOverlay.html
@@ -18,8 +18,8 @@
       * {
         font-family: 'Zpix';
         font-size: 18px;
-      }</style>
-    </head>
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
