--- a/chatRoom.html
+++ b/chatRoom.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>stream-me-board</title>
+    <link href="/static/fontawesome/css/fontawesome-all.css" rel="stylesheet">
+    <script src="static/fp.min.js"></script>
+    <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+    <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
+    <script src="static/firebase-conf.js"></script>
+    <style>
+      body {
+        background-color: rgb(105, 105, 105);
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
