--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		}
 		if(window.self !== window.top)
 			window.top.location.replace(window.self.location.href)
-		window.location = isMobile(navigator.userAgent||navigator.vendor||window.opera) ? 'mobileVisitor.html' : 'pcVisitor.html'
+		window.location = isMobile(navigator.userAgent||navigator.vendor||window.opera) ? 'mobile.html' : 'pc.html'
 	</script>
 </html>
