--- a/pc.html
+++ b/pc.html
@@ -23,7 +23,7 @@
         font-family: 'Zpix';
         font-size: 14px;
       }
-      .fas {
+      .fas, .far {
         vertical-align: middle;
       }
       body {
