--- a/chat.html
+++ b/chat.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="/static/fontawesome/css/fontawesome-all.css" rel="stylesheet">
     <script src="static/fp.min.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
@@ -11,6 +12,7 @@
     <style>
       body {
         background-color: rgb(105, 105, 105);
+        overflow-x: hidden;
       }
     </style>
   </head>
