--- a/chat.html
+++ b/chat.html
@@ -14,6 +14,17 @@
         background-color: rgb(105, 105, 105);
         overflow-x: hidden;
       }
+      @font-face {
+        font-family: 'Zpix';
+        src: url('static/zpix.ttf') format('truetype');
+        text-rendering: optimizeSpeed;
+      }
+      * {
+        font-family: 'Zpix';
+      }
+      .fas, .far {
+        vertical-align: middle;
+      }
     </style>
   </head>
   <body>
