--- a/pc.html
+++ b/pc.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="/static/fontawesome/css/fontawesome-all.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="static/tooltip.css">
     <link rel="shortcut icon" type="image/png" sizes="32x32" href="static/gamepad-32x32.png" />
     <link rel="Bookmark" type="image/png" sizes="32x32" href="static/gamepad-32x32.png" />
     <title>祥平與ice和你一起邊聊邊玩!</title>
@@ -34,97 +35,6 @@
       }
       [v-cloak] {
         display: none;
-      }
-      .tooltip {
-        display: block !important;
-        z-index: 10000;
-      }
-      .tooltip .tooltip-inner {
-        background: black;
-        color: white;
-        border-radius: 4px;
-        padding: 5px 10px 4px;
-      }
-      .tooltip .tooltip-arrow {
-        width: 0;
-        height: 0;
-        border-style: solid;
-        position: absolute;
-        margin: 5px;
-        border-color: black;
-        z-index: 1;
-      }
-      .tooltip[x-placement^="top"] {
-        margin-bottom: 5px;
-      }
-      .tooltip[x-placement^="top"] .tooltip-arrow {
-        border-width: 5px 5px 0 5px;
-        border-left-color: transparent !important;
-        border-right-color: transparent !important;
-        border-bottom-color: transparent !important;
-        bottom: -5px;
-        left: calc(50% - 5px);
-        margin-top: 0;
-        margin-bottom: 0;
-      }
-      .tooltip[x-placement^="bottom"] {
-        margin-top: 5px;
-      }
-      .tooltip[x-placement^="bottom"] .tooltip-arrow {
-        border-width: 0 5px 5px 5px;
-        border-left-color: transparent !important;
-        border-right-color: transparent !important;
-        border-top-color: transparent !important;
-        top: -5px;
-        left: calc(50% - 5px);
-        margin-top: 0;
-        margin-bottom: 0;
-      }
-      .tooltip[x-placement^="right"] {
-        margin-left: 5px;
-      }
-      .tooltip[x-placement^="right"] .tooltip-arrow {
-        border-width: 5px 5px 5px 0;
-        border-left-color: transparent !important;
-        border-top-color: transparent !important;
-        border-bottom-color: transparent !important;
-        left: -5px;
-        top: calc(50% - 5px);
-        margin-left: 0;
-        margin-right: 0;
-      }
-      .tooltip[x-placement^="left"] {
-        margin-right: 5px;
-      }
-      .tooltip[x-placement^="left"] .tooltip-arrow {
-        border-width: 5px 0 5px 5px;
-        border-top-color: transparent !important;
-        border-right-color: transparent !important;
-        border-bottom-color: transparent !important;
-        right: -5px;
-        top: calc(50% - 5px);
-        margin-left: 0;
-        margin-right: 0;
-      }
-      .tooltip.popover .popover-inner {
-        background: #f9f9f9;
-        color: black;
-        padding: 24px;
-        border-radius: 5px;
-        box-shadow: 0 5px 30px rgba(black, .1);
-      }
-      .tooltip.popover .popover-arrow {
-        border-color: #f9f9f9;
-      }
-      .tooltip[aria-hidden='true'] {
-        visibility: hidden;
-        opacity: 0;
-        transition: opacity .15s, visibility .15s;
-      }
-      .tooltip[aria-hidden='false'] {
-        visibility: visible;
-        opacity: 1;
-        transition: opacity .15s;
       }
     </style>
   </head>
