--- a/admin.html
+++ b/admin.html
@@ -4,11 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="/static/fontawesome/css/fontawesome-all.css" rel="stylesheet">
+    <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosanstc.css">
     <title>管理頁面</title>
     <script src="static/fp.min.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
     <script src="static/firebase-conf.js"></script>
+    <style>
+      .fas, .far {
+        vertical-align: middle;
+      }
+      * {
+        font-family:'Noto Sans TC', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
