--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link href="/static/fontawesome/css/fontawesome-all.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/fontawesome/css/fontawesome-all.css">
+    <link rel="stylesheet" href="/static/common.css">
     <script src="static/fp.min.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
@@ -13,17 +14,6 @@
       body {
         background-color: rgb(105, 105, 105);
         overflow-x: hidden;
-      }
-      @font-face {
-        font-family: 'Zpix';
-        src: url('static/zpix.ttf') format('truetype');
-        text-rendering: optimizeSpeed;
-      }
-      * {
-        font-family: 'Zpix';
-      }
-      .fas, .far {
-        vertical-align: middle;
       }
     </style>
   </head>
