--- a/pc.html
+++ b/pc.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="/static/fontawesome/css/fontawesome-all.css" rel="stylesheet">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="static/tooltip.css">
     <link rel="shortcut icon" type="image/png" sizes="32x32" href="static/gamepad-32x32.png"/>
     <link rel="Bookmark" type="image/png" sizes="32x32" href="static/gamepad-32x32.png"/>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="static/tooltip.css">
+    <link rel="stylesheet" href="/static/fontawesome/css/fontawesome-all.css">
+    <link rel="stylesheet" href="/static/common.css">
     <title>祥平與ice和你一起邊聊邊玩!</title>
     <script src="static/fp.min.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
@@ -15,26 +16,11 @@
     <script src="static/firebase-conf.js"></script>
     <script src="//www.youtube.com/iframe_api"></script>
     <style>
-      @font-face {
-        font-family: 'Zpix';
-        src: url('static/zpix.ttf') format('truetype');
-        text-rendering: optimizeSpeed;
-      }
-      * {
-        font-family: 'Zpix';
-        font-size: 14px;
-      }
-      .fas, .far {
-        vertical-align: middle;
-      }
       body {
         cursor: default;
         margin: 0px;
         background: linear-gradient(to bottom, #45283C 0%, #3f339e 100%);
         overflow: hidden;
-      }
-      [v-cloak] {
-        display: none;
       }
     </style>
   </head>
