--- a/streamOverlay.html
+++ b/streamOverlay.html
@@ -5,20 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="/static/fontawesome/css/fontawesome-all.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link rel="stylesheet" href="static/common.css">
     <script src="static/fp.min.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
     <script src="static/firebase-conf.js"></script>
-    <style>
-      @font-face {
-        font-family: 'Zpix';
-        src: url('static/zpix.ttf') format('truetype');
-        text-rendering: optimizeSpeed;
-      }
-      * {
-        font-family: 'Zpix';
-      }
-    </style>
   </head>
   <body>
     <div id="app"></div>
