--- a/mobile.html
+++ b/mobile.html
@@ -15,6 +15,14 @@
     <script src="static/firebase-conf.js"></script>
     <script src="//www.youtube.com/iframe_api"></script>
   </head>
+  <style>
+    body {
+      margin: 0px;
+      background: linear-gradient(to right, #45283C 0%, #3f339e 100%);
+      overflow: hidden;
+      height: 100vh;
+    }
+  </style>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
