--- a/mobile.html
+++ b/mobile.html
@@ -18,9 +18,12 @@
   <style>
     body {
       margin: 0px;
-      background: linear-gradient(to right, #45283C 0%, #3f339e 100%);
+      background-color: #927964;
       overflow: hidden;
       height: 100vh;
+      color: #f8ecd5;
+      text-shadow: 0px 3px #705749, 3px 3px #86674d;
+      line-height: 20px;
     }
   </style>
   <body>
