--- a/mobile.html
+++ b/mobile.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="/static/fontawesome/css/fontawesome-all.css">
     <link rel="stylesheet" href="/static/common.css">
+    <link rel="stylesheet" href="/static/custom-animated.css">
     <title>祥平與ice和你一起邊聊邊玩!</title>
     <script src="static/fp.min.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
