--- a/pc.html
+++ b/pc.html
@@ -27,16 +27,8 @@
         background: linear-gradient(-45deg, #2f6d5a, #44453e, #3d3933, #2f6d5a);
         background-size: 100% 100%;
       }
-      @keyframes Gradient {
-        0% {
-          background-position: 0% 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0% 50%;
-        }
+      .tooltip {
+        text-shadow: none;
       }
     </style>
   </head>
