--- a/pc.html
+++ b/pc.html
@@ -24,8 +24,12 @@
         height: 100vh;
         color: #f8ecd5;
         text-shadow: 0px 3px #705749, 3px 3px #86674d;
-        background: linear-gradient(-45deg, #2f6d5a, #44453e, #3d3933, #2f6d5a);
-        background-size: 100% 100%;
+        background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAI0lEQVQIW2NkwAT/GdHE/gP5jMiCYAGQIpggXAAmiCIAEgQAAE4FBbECyZcAAAAASUVORK5CYII=) #222;
+      }
+      #background {
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
       }
       .tooltip {
         text-shadow: none;
@@ -33,6 +37,9 @@
     </style>
   </head>
   <body>
+    <canvas id="background"></canvas>
+    <script src="static/background.js"></script>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <span style="font-family:'Mobile Font'"></span>
