--- a/pc.html
+++ b/pc.html
@@ -17,6 +17,7 @@
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
     <script src="static/firebase-conf.js"></script>
     <script src="//www.youtube.com/iframe_api"></script>
+    <script src="static/bowser.min.js"></script>
     <style>
       body {
         margin: 0px;
