--- a/mobile.html
+++ b/mobile.html
@@ -15,6 +15,7 @@
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
     <script src="static/firebase-conf.js"></script>
     <script src="//www.youtube.com/iframe_api"></script>
+    <script src="static/bowser.min.js"></script>
   </head>
   <style>
     body {
