--- a/project/pc.html
+++ b/project/pc.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" type="image/png" sizes="32x32" href="static/gamepad-32x32.png"/>
     <link rel="Bookmark" type="image/png" sizes="32x32" href="static/gamepad-32x32.png"/>
     <link rel="stylesheet" href="/static/common.css">
+    <link rel="stylesheet" href="/static/loader.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="static/tooltip.css">
     <link rel="stylesheet" href="/static/fontawesome/css/fontawesome-all.css">
@@ -40,6 +41,10 @@
   <body>
     <canvas id="background"></canvas>
     <script src="static/background.js"></script>
+    <div id='loader'>
+      <div class='loader shadow'></div>
+      <div class='loader'></div>
+    </div>
 
     <div id="app"></div>
     <!-- built files will be auto injected -->
