--- a/project/streamOverlay.html
+++ b/project/streamOverlay.html
@@ -10,6 +10,7 @@
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
     <script src="static/firebase-conf.js"></script>
+    <script src="static/bowser.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
