--- a/project/admin.html
+++ b/project/admin.html
@@ -11,6 +11,7 @@
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script src="//www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
     <script src="static/firebase-conf.js"></script>
+    <script src="static/bowser.min.js"></script>
     <style>
       * {
         font-family:'Noto Sans TC', sans-serif;
